/*
 * Copyright 2013 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package squareup.protos.custom_options;

option java_package = "com.squareup.wire.protos.custom_options";

import "google/protobuf/descriptor.proto";

message FooBar {
  optional int32 foo = 1;
  optional string bar = 2;
  optional Nested baz = 3;
  optional uint64 qux = 4;
  optional float fred = 5;
  optional double daisy = 6;

  message Nested {
    optional FooBarBazEnum value = 1;
  }

  enum FooBarBazEnum {
    FOO = 1;
    BAR = 2;
    BAZ = 3;
  }
}

extend google.protobuf.MessageOptions {
  optional FooBar my_message_option_one = 50001;
  optional float my_message_option_two = 50002;
  optional FooBar my_message_option_three = 50003;
  optional FooBar.FooBarBazEnum my_message_option_four = 50004;
}

message MessageWithOptions {
  option (my_message_option_one).foo = 1234;
  option (my_message_option_one).bar = "5678";
  option (my_message_option_one).baz.value = BAZ;
  option (my_message_option_one).qux = 18446744073709551615;
  option (my_message_option_one).fred = 123.0;
  option (my_message_option_one).daisy = 456.0;
  option (my_message_option_two) = 91011.0;
  option (my_message_option_three) = { foo: 11, bar: "22", baz: { value: BAR }};
  option (my_message_option_four) = FOO;
}
